--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site created by Savas. It Uses data from mapbox and darksky.net!</p>
             <img class="portrait" src="/img/cat.png">
         </div>
         {{>footer}}        
